  The dependency to xml-apis was changed to the version 1.0.b2. The so far
  used version 2.0.2 is reported to be bogus.

* [CONFIGURATION-252]
  ConfigurationUtils.getFile() now always checks first whether the passed in
  file name is absolute. If it is, this file will be returned. This prevents
  that on Unix under certain circumstances absolute file names are interpreted
  as relative ones.

IMPROVEMENTS IN 1.4
===================
* [CONFIGURATION-155]
  SubsetConfiguration and CompositeConfiguration were updated to fully support
  an instance specific list delimiter. Concerning splitting of string
  properties that contain a list delimiter character, these classes now
  behave like a "normal" configuration.

* [CONFIGURATION-192]
  Variable interpolation features have been improved. A variable can now have
  the form ${prefix:variableName} where the prefix defines the type of the
  variable. The standard types sys for system properties and const for
  constants are supported. Variables without a prefix are treated as references
  to other configuration properties (which is compatible to earlier versions).

* [CONFIGURATION-197]
  A new configuration class for windows ini files was added.

* [CONFIGURATION-236]
  HierarchicalConfiguration and some of its sub classes now define a copy
  constructor.

* [CONFIGURATUON-237]
  With ManagedReloadingStrategy a new reloading strategy for file-based
  configurations was added that can be triggered through JMX.

* [CONFIGURATION-243]
  Configuration declarations in the configuration definition file for
  DefaultConfigurationBuilder that are marked as optional now support a new
  attribute config-forceCreate. If this attribute is set to true and the
  initialization of the configuration fails, DefaultConfigurationBuilder
  tries to add an empty configuration of the correct type to the resulting
  combined configuration. Before this change optional configurations that